--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "find-changed-rush-packages",
   "version": "0.1.0",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "main": "dist/index.js",
   "scripts": {
     "build": "ncc build src/main.ts",
