--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
         uses: ./ # Uses an action in the root directory
         id: test
         with:
-          rushJsonPath: ./__mocks__/rush.json
+          rushProjects: ./__mocks__/rushProjects.json
           environment: ${{ env.DEPLOY_ENVIRONMENT }}
       - name: Show AWS projects
         run: echo "AWS Projects - ${{ steps.test.outputs.aws }}"
